@@ -7,8 +7,11 @@
 ;; to disable it
 ;;(defvar enable-functionnality nil)
 
-;;display the menu bar
-(defvar enable-menu-bar nil)
+(setq enable-scroll-bar nil)
+(setq enable-menu-bar nil)
+(setq enable-tool-bar nil)
+
+
 
 ;;enable/disable the zone screensaver
 (defvar enable-zone nil)
