@@ -1,3 +1,6 @@
+2008-03-15 Cedric GESTES <ctaf42@gmail.com>
+	* emacs: beginning support for gtk-ctafconf (menubar/scrollbar/toolbar)
+
 2008-03-11  Cedric GESTES  <gestes@aldebaran-robotics.com>
 	* emacs: added cmake-mode
 
